Increases the heap on the servers.